# cairo-m

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  DELTA_DIAGNOSTICS_IMPLEMENTATION.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  MDTEST_MIGRATION_SUMMARY.md  MDTEST_PRD.md  MIR_CRITICAL_BUGS.md  MIR_MAINTAINABILITY_TASKS.md  MIR_REFACTORING_COMPLETED.md  MIR_REFACTORING_PLAN.md  MIR_REPORT.md  Makefile  PIPELINE_SIMPLIFICATION.md  PR1_CFG_ENTRY_CORRECTNESS.md  PR2_TYPED_GEP_SSA_AGGREGATES.md  PR3_PASS_PIPELINE_PREOPT.md  README.md  REFACTORING_PROGRESS.md  TEST_PATTERNS_RECAP.md  WORK_PLAN.md  codegen_refactor_progress.md  cspell.yaml  debug.cm  debug_diagnostics.rs  fib_rec.json  formatter-implementation-plan.md  getting-started.md  issue-plan.md  out.txt  out2.txt  out3.txt  plan.md  semantic_index_refactoring_plan.md  test_comparison.cm  test_diagnostics.cm  (+9 more)
crates/cairo-m-ls/: Cargo.toml
crates/cairo-m-ls/docs/: design.md  test_design.md
crates/cairo-m-ls/src/: backend.rs  debounce_test.rs  debug_test.rs  lib.rs  lsp_ext.rs  lsp_tracing.rs  main.rs  test_real_file.rs  utils.rs
crates/cairo-m-ls/src/db/: mod.rs  swapper.rs
crates/cairo-m-ls/src/diagnostics/: controller.rs  mod.rs  state.rs
crates/cairo-m-ls/src/project/: controller.rs  manifest.rs  mod.rs  model.rs
crates/cairo-m-ls/tests/e2e/: debug_formatting.rs  debug_formatting_detailed.rs  diagnostics_test.rs  formatting_test.rs  main.rs  simple_test.rs
crates/cargo-cairo-m/: Cargo.toml
crates/cargo-cairo-m/src/: main.rs
crates/cargo-cairo-m/templates/: Cargo.toml  README.md  cairom.toml  cargo-config.toml  fibonacci.cm  integration_test.rs  lib.rs
crates/common/: Cargo.toml
crates/common/src/: abi_codec.rs  cairo_m_serialize.rs  execution.rs  instruction.rs  lib.rs  opcode.rs  paged_memory.rs  program.rs  state.rs
crates/common/tests/: instruction_tests.rs
crates/compiler/: CLAUDE.md  Cargo.toml  assessment.md  demo.cm  dev-plan.md  fib.cairo  fib.cm  test_unreachable.cm
crates/compiler/cairo-m-project/: Cargo.toml
crates/compiler/cairo-m-project/src/: discovery.rs  lib.rs  manifest.rs  model.rs
crates/compiler/codegen/: Cargo.toml  README.md  session.md
crates/compiler/codegen/proptest-regressions/: builder.txt
crates/compiler/codegen/src/: backend.rs  builder.rs  compiled_program.rs  db.rs  generator.rs  layout.rs  lib.rs  opcode.rs  optimizations.rs  program.rs  serialize.rs  test_support.rs
crates/compiler/codegen/tests/: backend_integration_test.rs  codegen_auto_discovery.rs  codegen_tests.rs  label_resolution_tests.rs  mdtest_snapshots.rs  multi_file_integration.rs
crates/compiler/diagnostics/: Cargo.toml
crates/compiler/diagnostics/src/: diagnostics.rs  lib.rs  reporting.rs
crates/compiler/docs/: salsa_api_guide.md
crates/compiler/formatter/: Cargo.toml  README.md
crates/compiler/formatter/src/: api.rs  comment_attachment.rs  comment_preserver.rs  doc.rs  lib.rs  trivia.rs  utils.rs
crates/compiler/formatter/tests/: comment_tests.rs  docstring_attachment_tests.rs  formatter_tests.rs
crates/compiler/mir/: Cargo.toml  MIGRATION_GUIDE.md  PASSES.md  README.md  REFACTORING_JOURNAL.md  REFACTOR_JOURNAL.md  report.md  session.md
crates/compiler/mir/examples/: phi_elimination_demo.rs
crates/compiler/mir/src/: aggregate_instruction_tests.rs  backend.rs  basic_block.rs  cfg.rs  conditional_pass_test.rs  db.rs  function.rs  function_tests.rs  insert_instructions_test.rs  instruction.rs  instruction_tests.rs  ir_generation.rs  layout.rs  lib.rs  mir_types.rs  module.rs  passes.rs  passes_tests.rs  pipeline.rs  pipeline_tests.rs  pretty_print_tests.rs  terminator.rs  testing.rs  value.rs  value_kind.rs  value_visitor.rs
crates/compiler/mir/tests/: aggregate_folding_tests.rs  aggregate_offset_tests.rs  aggregate_patterns.rs  conditional_passes_test.rs  file_id_collision_test.rs  lower_aggregates_tests.rs  mdtest_snapshots.rs  (+6 more)
crates/compiler/parser/: Cargo.toml  README.md
crates/compiler/semantic/: Cargo.toml  README.md  session.md
crates/compiler/src/: assembler.rs  ast.rs  casm.rs  db.rs  error.rs  errors.rs  lexer.rs  lib.rs  lower_to_casm.rs  main.rs  minivm.rs  parser.rs  project_discovery.rs
crates/compiler/test_data/: fib.cm
crates/compiler/tests/: mod.rs
crates/prover/: Cargo.toml  build.rs
crates/prover/benches/: prover_memory_benchmark.rs  prover_speed_benchmark.rs  range_check_init.rs  sha_bench_utils.rs
crates/prover/examples/: sha256_benchmark.rs
crates/prover/src/: debug_tools.rs  errors.rs  lib.rs  main.rs  poseidon2.rs  prover.rs  prover_config.rs  public_data.rs  relations.rs  utils.rs  verifier.rs
crates/prover/tests/: fibonacci_trace_test.rs  opcode_constraint_tests.rs  opcodes.rs  poseidon2.rs  prover.rs  serialization.rs
crates/runner/: CLAUDE.md  Cargo.toml  build.rs
crates/runner/benches/: fibonacci_loop.cm  vm_benchmark.rs
crates/runner/src/: lib.rs  main.rs
crates/runner/tests/: abi_codec_tests.rs  diff_tests.rs  mdtest_generated.rs  opt_equivalence.rs
crates/verifier/: Cargo.toml  consignes.txt  transcript.txt
crates/verifier/src/: lib.rs  poseidon31_merkle.rs  prover.rs  prover_config.rs  public_data.rs  relations.rs  utils.rs  verifier.rs
crates/verifier/tests/: prover.rs  verify_cairo_m.rs  verify_fibonacci.rs
crates/wasm/: .gitignore  Cargo.toml  README.md  WOMIR_LOOPS_GUIDE.md
crates/wasm/src/: flattening.rs  lib.rs  loader.rs  lowering.rs  main.rs
crates/wasm/tests/: diff_tests.proptest-regressions  diff_tests.rs  test_utils.rs  wasm_loading_tests.rs  wasm_to_mir_tests.rs
examples/sha256-cairo-m/: .gitignore  Cargo.toml  README.md  cairom.toml
examples/sha256-cairo-m/src/: sha256.cm
examples/sha256-cairo-m/tests/: integration_test.rs
tutorials/cairomlings/: .cairomlings-state.txt  Cargo.toml  README.md  info.toml
tutorials/cairomlings/exercises/: README.md
tutorials/cairomlings/internal-macros/: Cargo.toml  info.toml
tutorials/cairomlings/src/: app_state.rs  cargo_toml.rs  cmd.rs  dev.rs  embedded.rs  exercise.rs  info_file.rs  init.rs  main.rs  term.rs  watch.rs
(+2333 files in other folders)
