[workspace]
members = [
  "crates/compiler/parser",
  "crates/compiler/semantic",
  "crates/compiler/mir",
  "crates/compiler/codegen",
  "crates/compiler/diagnostics",
  "crates/compiler",
  "crates/runner",
  "crates/prover",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"

[workspace.dependencies]
# Local dependencies
cairo-m-compiler-parser = { path = "crates/compiler/parser" }
cairo-m-compiler-semantic = { path = "crates/compiler/semantic" }
cairo-m-compiler-mir = { path = "crates/compiler/mir" }
cairo-m-compiler-diagnostics = { path = "crates/compiler/diagnostics" }
cairo-m-compiler-codegen = { path = "crates/compiler/codegen" }
cairo-m-compiler = { path = "crates/compiler" }
cairo-m-runner = { path = "crates/runner" }
cairo-m-prover = { path = "crates/prover" }

# Starkware dependencies
stwo-prover = { git = "https://github.com/starkware-libs/stwo", features = [
  "parallel",
], rev = "8b5436d" }
stwo-air-utils-derive = { git = "https://github.com/starkware-libs/stwo", rev = "8b5436d" }
stwo-air-utils = { git = "https://github.com/starkware-libs/stwo", rev = "8b5436d" }

# General dependencies
clap = { version = "4.5.40", features = ["derive"] }
num-traits = "0.2.19"
sonic-rs = "0.5.1"
tempfile = "3.20"
thiserror = "2.0.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
