[workspace]
members = [
  "crates/common",
  "crates/compiler",
  "crates/compiler/parser",
  "crates/compiler/semantic",
  "crates/compiler/mir",
  "crates/compiler/codegen",
  "crates/compiler/diagnostics",
  "crates/compiler/formatter",
  "crates/compiler/cairo-m-project",
  "crates/runner",
  "crates/prover",
  "crates/cairo-m-ls",
  "crates/wasm",
  "crates/test_utils",
  "crates/cargo-cairo-m",
]
resolver = "2"
exclude = ["examples/sha256-cairo-m"]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Local dependencies
cairo-m-common = { path = "crates/common" }
cairo-m-compiler-parser = { path = "crates/compiler/parser" }
cairo-m-compiler-semantic = { path = "crates/compiler/semantic" }
cairo-m-compiler-mir = { path = "crates/compiler/mir" }
cairo-m-compiler-diagnostics = { path = "crates/compiler/diagnostics" }
cairo-m-compiler-codegen = { path = "crates/compiler/codegen" }
cairo-m-project = { path = "crates/compiler/cairo-m-project" }
cairo-m-compiler = { path = "crates/compiler" }
cairo-m-runner = { path = "crates/runner" }
cairo-m-prover = { path = "crates/prover" }
cairo-m-formatter = { path = "crates/compiler/formatter" }
cairo-m-wasm = { path = "crates/wasm" }
cairo-m-test-utils = { path = "crates/test_utils" }

# External dependencies

# Starkware dependencies
stwo = { git = "https://github.com/starkware-libs/stwo", features = [
  "parallel",
], rev = "75a6b0ac9bcc7101d8658445dded51923ab2586f" }
stwo-air-utils-derive = { git = "https://github.com/starkware-libs/stwo", rev = "75a6b0ac9bcc7101d8658445dded51923ab2586f" }
stwo-air-utils = { git = "https://github.com/starkware-libs/stwo", rev = "75a6b0ac9bcc7101d8658445dded51923ab2586f" }
stwo-constraint-framework = { git = "https://github.com/starkware-libs/stwo", features = [
  "parallel",
  "prover",
], rev = "75a6b0ac9bcc7101d8658445dded51923ab2586f" }
std-shims = { git = "https://github.com/starkware-libs/stwo", rev = "75a6b0ac9bcc7101d8658445dded51923ab2586f", features = [
  "std",
], default-features = false }

# General dependencies (including stwo dependencies)
anyhow = "1.0.96"
blake2 = "0.10.6"
blake3 = "1.5.0"
bytemuck = "1.14.3"
chumsky = "0.10.1"
clap = { version = "4.5.40", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
dhat = "0.3.3"
educe = "0.5.0"
hashbrown = ">=0.15.2"
hex = "0.4.3"
itertools = "0.12.0"
num-traits = "0.2.19"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
rayon = { version = "1.10.0", optional = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
smallvec = "1.15"
sonic-rs = "0.5.1"
tempfile = "3.20"
thiserror = "2.0.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# Poseidon2 hash function implementation
# TODO: Remove patch once https://github.com/HorizenLabs/poseidon2/pull/8 is merged
zkhash = { git = "https://github.com/HorizenLabs/poseidon2.git", branch = "main" }

# Patching stwo to use local version
[patch."https://github.com/starkware-libs/stwo"]
stwo = { path = "external/stwo/crates/stwo" }
stwo-air-utils = { path = "external/stwo/crates/air-utils" }
stwo-air-utils-derive = { path = "external/stwo/crates/air-utils-derive" }
stwo-constraint-framework = { path = "external/stwo/crates/constraint-framework" }

# Temporary patch for zkhash to support M31 field operations
# This patches the HorizenLabs/poseidon2 repo to use our custom branch with M31 field support
# TODO: Remove this patch once https://github.com/HorizenLabs/poseidon2/pull/XXX is merged
[patch."https://github.com/HorizenLabs/poseidon2.git"]
zkhash = { git = "https://github.com/AntoineFONDEUR/poseidon2.git", branch = "poseidon2-M31" }

[profile.release-lto]
inherits = "release"
codegen-units = 1
lto = true
