[package]
name = "cargo-cairo-m"
version.workspace = true
edition = "2024"
description = "Binary for creating Cairo-M projects from a default template"
license = "MIT OR Apache-2.0"

[[bin]]
name = "cargo-cairo-m"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
