[package]
name = "cairo-m-compiler"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "cairo-m-compiler"
path = "src/main.rs"

[dependencies]
cairo-m-compiler-parser.workspace = true
cairo-m-compiler-semantic.workspace = true
cairo-m-compiler-mir.workspace = true
cairo-m-compiler-diagnostics.workspace = true
cairo-m-compiler-codegen.workspace = true
cairo-m-common.workspace = true
clap.workspace = true
ariadne = "0.5.1"
anyhow = "1.0"
logos = "0.15"
chumsky = "0.10.1"
salsa = "0.22"
sonic-rs = "0.3"
num-traits.workspace = true
thiserror.workspace = true
walkdir = "2.4"
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
