[package]
name = "cairo-m-prover"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
stwo-prover.workspace = true
stwo-air-utils.workspace = true
stwo-air-utils-derive.workspace = true
rayon = "1.10.0"
num-traits.workspace = true
rand = "0.8.5"
thiserror.workspace = true
tracing.workspace = true
bytemuck.workspace = true
sonic-rs.workspace = true
cairo-m-runner.workspace = true
cairo-m-compiler.workspace = true
cairo-m-common.workspace = true
paste = "1.0"

[dev-dependencies]
tempfile = "3.0"
itertools.workspace = true
criterion.workspace = true

[[bench]]
name = "range_check_init"
harness = false
