[package]
name = "cairo-m-prover"
version.workspace = true
edition.workspace = true

[features]
relation-tracker = []
dhat-heap = []

[[bin]]
name = "cairo-m-prover"
path = "src/main.rs"

[dependencies]
serde.workspace = true
stwo-prover.workspace = true
stwo-air-utils.workspace = true
stwo-air-utils-derive.workspace = true
stwo-constraint-framework.workspace = true
rayon.workspace = true
num-traits.workspace = true
rand.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytemuck.workspace = true
sonic-rs.workspace = true
cairo-m-runner.workspace = true
cairo-m-compiler.workspace = true
cairo-m-common.workspace = true
itertools.workspace = true
anyhow.workspace = true
clap.workspace = true
paste = "1.0"

[dev-dependencies]
tempfile = "3.0"
itertools.workspace = true
criterion.workspace = true
peak_alloc = "0.2.0"
dhat.workspace = true

[[bench]]
name = "prover_speed_benchmark"
harness = false

[[bench]]
name = "prover_memory_benchmark"
harness = false
