[package]
name = "cairo-m-runner"
version.workspace = true
edition.workspace = true

[lib]
name = "cairo_m_runner"
path = "src/lib.rs"

[[bin]]
name = "cairo-m-runner"
path = "src/main.rs"

[dependencies]
cairo-m-compiler.workspace = true
clap.workspace = true
num-traits.workspace = true
sonic-rs.workspace = true
stwo-prover.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true

[[bench]]
name = "vm_benchmark"
harness = false
