[package]
name = "cairo-m-runner"
version.workspace = true
edition.workspace = true

[lib]
name = "cairo_m_runner"
path = "src/lib.rs"

[[bin]]
name = "cairo-m-runner"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
cairo-m-common.workspace = true
cairo-m-compiler.workspace = true
clap.workspace = true
num-traits.workspace = true
proptest = "1.7.0"
regex = "1.11.1"
smallvec.workspace = true
sonic-rs.workspace = true
stwo-prover.workspace = true
thiserror.workspace = true
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true
cairo-m-test-utils.workspace = true
rand = "0.8"
once_cell = "1.19"

[build-dependencies]
walkdir = "2.4"
cairo-m-test-utils = { path = "../test_utils" }


[[bench]]
name = "vm_benchmark"
harness = false
