[package]
name = "cairo-m-verifier"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
relation-tracker = []

[dependencies]
cairo-m-runner.workspace = true
cairo-m-compiler.workspace = true
cairo-m-common.workspace = true
cairo-m-prover.workspace = true
stwo-prover.workspace = true
stwo-air-utils.workspace = true
stwo-air-utils-derive.workspace = true
stwo-constraint-framework.workspace = true

anyhow = { workspace = true }
itertools = { workspace = true }
num-traits = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
test-log = { workspace = true }
