[package]
name = "cairo-m-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
womir = { git = "https://github.com/powdr-labs/womir", rev = "3d36244" }
thiserror.workspace = true
cairo-m-compiler-mir.workspace = true
cairo-m-compiler-codegen.workspace = true
cairo-m-common.workspace = true
stwo-prover.workspace = true
## Needed at runtime to execute compiled programs from the CLI
cairo-m-runner.workspace = true
wasmparser = "0.235.0"
clap = { version = "4.0", features = ["derive"] }
sonic-rs = "0.3"
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
insta = "1.43.1"
proptest = "1.7.0"
cairo-m-runner.workspace = true
