[workspace.package]
version = "6.5.0"
authors = [
  # Rustlings Authors
  "Mo Bitar <mo8it@proton.me>", # https://github.com/mo8it
  "Liv <mokou@fastmail.com>",   # https://github.com/shadows-withal
  # Alumni
  "Carol (Nichols || Goulding) <carol.nichols@gmail.com>", # https://github.com/carols10cents
]
repository = "https://github.com/kkrt-labs/cairo-m"
license = "MIT"
edition = "2024"
rust-version = "1.88"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.9", default-features = false, features = [
  "std",
  "parse",
  "serde",
] }

[lints]
workspace = true

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
empty_loop = "forbid"
disallowed-types = "deny"
disallowed-methods = "deny"
infinite_loop = "deny"
mem_forget = "deny"
dbg_macro = "warn"
todo = "warn"

[package]
name = "rustlings"
description = "Small exercises to get you used to reading and writing Rust code!"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords = ["exercise", "learning"]
include = [
  "/src/",
  "/exercises/",
  "/solutions/",
  # A symlink to be able to include `dev/Cargo.toml` although `dev` is excluded.
  "/dev-Cargo.toml",
  "/README.md",
  "/LICENSE",
]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
notify = "8.0"
crossterm = { version = "0.29", default-features = false, features = [
  "windows",
  "events",
] }
time = { version = "0.3", features = ["macros"] }
serde_json = "1.0.145"
internal-macros = { path = "./internal-macros" }
quote = "1.0"

[target.'cfg(not(windows))'.dependencies]
rustix = { version = "1.0", default-features = false, features = [
  "std",
  "stdio",
  "termios",
] }


# Local Cairo-M crates (path dependencies for local dev)
cairo-m-common = { path = "../../crates/common" }
cairo-m-compiler = { path = "../../crates/compiler" }
cairo-m-runner = { path = "../../crates/runner" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"

[package.metadata.release]
release = false

[workspace]
