[package]
name = "{{name}}"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
cairo-m-common = { git = "https://github.com/kkrt-labs/cairo-m" }
cairo-m-runner = { git = "https://github.com/kkrt-labs/cairo-m" }
cairo-m-compiler = { git = "https://github.com/kkrt-labs/cairo-m" }
anyhow = "1.0"
proptest = "1.0"
