[package]
name = "cairo-m-compiler-codegen"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core dependencies for data structures
index_vec = "0.1.4"
rustc-hash = "1.1.0"
serde_json.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
sonic-rs = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# Salsa for incremental compilation
salsa = "0.22.0"
salsa-macros = "0.22.0"

# Project dependencies
cairo-m-common.workspace = true
cairo-m-compiler-parser.workspace = true
cairo-m-compiler-semantic.workspace = true
cairo-m-compiler-diagnostics.workspace = true
cairo-m-compiler-mir.workspace = true

# Chumsky types
chumsky = "0.10.1"

# Field arithmetic for M31
num-traits.workspace = true
stwo-prover.workspace = true

# Testing dependencies
[dev-dependencies]
insta = "1.43.1"
