[package]
name = "cairo-m-compiler-codegen"
version.workspace = true
edition.workspace = true

[dependencies]
# Core dependencies for data structures
index_vec = "0.1.4"
rustc-hash = "1.1.0"
serde_json.workspace = true
serde.workspace = true
sonic-rs = "0.3"
chrono = { version = "0.4", features = ["serde"] }
smallvec.workspace = true

# Salsa for incremental compilation
salsa = "0.22.0"
salsa-macros = "0.22.0"

# Project dependencies
cairo-m-common.workspace = true
cairo-m-compiler-parser.workspace = true
cairo-m-compiler-semantic.workspace = true
cairo-m-compiler-diagnostics.workspace = true
cairo-m-compiler-mir.workspace = true

# Chumsky types
chumsky.workspace = true

# Field arithmetic for M31
num-traits.workspace = true
stwo.workspace = true
thiserror.workspace = true

# Testing dependencies
[dev-dependencies]
insta = { version = "1.43.1", features = ["glob"] }
cairo-m-test-utils.workspace = true
proptest = "1.7.0"
