[package]
name = "cairo-m-formatter"
version.workspace = true
edition.workspace = true

[dependencies]
cairo-m-compiler-parser = { workspace = true }
salsa = "0.22.0"
salsa-macros = "0.22.0"
smol_str = "0.3.2"
thiserror = { workspace = true }
ariadne = "0.5.1"
chumsky.workspace = true

[dev-dependencies]
insta = "1.43.1"
pretty_assertions = "1.4"
