[package]
name = "cairo-m-compiler-mir"
version = "0.1.0"
edition.workspace = true

[dependencies]
# Core dependencies for data structures
index_vec = "0.1.4"
rustc-hash = "1.1.0"

# Salsa for incremental compilation
salsa = "0.22.0"
salsa-macros = "0.22.0"

# Project dependencies
cairo-m-compiler-parser.workspace = true
cairo-m-compiler-semantic.workspace = true
cairo-m-compiler-diagnostics.workspace = true

# Chumsky types
chumsky = "0.10.1"

# Testing dependencies
[dev-dependencies]
insta = "1.43.1"
