[package]
name = "cairo-m-compiler-mir"
version.workspace = true
edition.workspace = true

[dependencies]
# Core dependencies for data structures
index_vec = "0.1.4"
rustc-hash = "1.1.0"

# Logging
log = "0.4"

# Salsa for incremental compilation
salsa = "0.22.0"
salsa-macros = "0.22.0"

# Project dependencies
cairo-m-compiler-parser.workspace = true
cairo-m-compiler-semantic.workspace = true
cairo-m-compiler-diagnostics.workspace = true
stwo.workspace = true

# Chumsky types
chumsky.workspace = true

# Testing dependencies
[dev-dependencies]
insta = { version = "1.43.1", features = ["glob"] }
cairo-m-test-utils.workspace = true
proptest = "1.7.0"
