[package]
name = "cairo-m-compiler-parser"
version.workspace = true
edition.workspace = true

[dependencies]
logos = "0.15"
ariadne = "0.5.1"
chumsky.workspace = true
smol_str = "=0.3.2"
insta = "1.43.1"
rowan = "0.16.1"
num-traits.workspace = true
num-derive = "0.4.2"
salsa = "0.22.0"
salsa-macros = "0.22.0"
cairo-m-compiler-diagnostics.workspace = true
tracing = "0.1"

[dev-dependencies]
stdext = "0.3"
cairo-m-test-utils.workspace = true
