[package]
name = "cairo-m-compiler-semantic"
version = "0.1.0"
edition.workspace = true

[dependencies]
logos = "0.15"
ariadne = "0.5.1"
chumsky.workspace = true
smol_str = "0.3.2"
insta = "1.43.1"
rowan = "0.16.1"
num-traits.workspace = true
num-derive = "0.4.2"
salsa = "0.22.0"
salsa-macros = "0.22.0"
bitflags = "2.6.0"
rustc-hash = "2.1.1"
indexmap = "2.6.0"

cairo-m-compiler-parser.workspace = true
cairo-m-compiler-diagnostics.workspace = true
cairo-m-project.workspace = true
index_vec = "0.1.4"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow.workspace = true

[dev-dependencies]
stdext = "0.3"
cairo-m-test-utils.workspace = true

[[test]]
name = "semantic_tests"
path = "tests/mod.rs"
